[gd_scene load_steps=26 format=3 uid="uid://d33r44fu71nhh"]

[ext_resource type="PackedScene" uid="uid://cpin614h2rqoi" path="res://grid.tscn" id="1_ae5do"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_xep6p"]
[ext_resource type="Shader" path="res://background.gdshader" id="2_hrjri"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="3_qfqky"]
[ext_resource type="Texture2D" uid="uid://l2w8noafawqq" path="res://Sprites/Form_I.png" id="5_hmenq"]
[ext_resource type="Texture2D" uid="uid://dau5rnv8835yg" path="res://Sprites/Form_J.png" id="6_s1ckg"]
[ext_resource type="Texture2D" uid="uid://culdqpvc2tsr4" path="res://Sprites/Form_L.png" id="7_42lau"]
[ext_resource type="AudioStream" uid="uid://dvg76orhtgq4o" path="res://Sound/HexoTangle_MainTheme.mp3" id="8_ftwso"]
[ext_resource type="Texture2D" uid="uid://dxwuf0mde64xv" path="res://Sprites/Banner Image.png" id="8_q1775"]
[ext_resource type="Script" path="res://Scripts/SoundManager.gd" id="9_tkctc"]
[ext_resource type="Script" path="res://Scripts/LeaderBoard.gd" id="9_x1esd"]
[ext_resource type="AudioStream" uid="uid://ccoe3gq8k2b75" path="res://Sound/OneLine.wav" id="10_pmf37"]
[ext_resource type="AudioStream" uid="uid://dh6wuu1hs72px" path="res://Sound/TwoLines.wav" id="11_prouk"]
[ext_resource type="AudioStream" uid="uid://cfnvpu7y6c7nu" path="res://Sound/ThreeLines.wav" id="12_fcj3h"]
[ext_resource type="AudioStream" uid="uid://didwcommunpne" path="res://Sound/FourLines.wav" id="13_xsvr1"]
[ext_resource type="AudioStream" uid="uid://cq27ys0418ul8" path="res://Sound/HardDrop.wav" id="14_p1ys5"]
[ext_resource type="AudioStream" uid="uid://dsy3xm0gjf0gi" path="res://Sound/SoftDrop.wav" id="15_kls3b"]
[ext_resource type="AudioStream" uid="uid://sfontjfbtqju" path="res://Sound/Rotation.wav" id="16_igtus"]
[ext_resource type="AudioStream" uid="uid://jvthburumka2" path="res://Sound/Movement.wav" id="17_lc6ri"]
[ext_resource type="AudioStream" uid="uid://dxm1fkjo6g522" path="res://Sound/Hold.wav" id="18_5ed10"]
[ext_resource type="AudioStream" uid="uid://5h5wm8bomui0" path="res://Sound/Error.wav" id="19_45we2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gaa0i"]
shader = ExtResource("2_hrjri")

[sub_resource type="LabelSettings" id="LabelSettings_3112v"]
font_size = 30
font_color = Color(0, 0.572549, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f871y"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k7ujp"]
font_size = 141
font_color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D" node_paths=PackedStringArray("timer", "soundManager", "grid", "ui", "leaderboard")]
script = ExtResource("1_xep6p")
timer = NodePath("Timer")
soundManager = NodePath("SoundManager")
grid = NodePath("Grid")
ui = NodePath("UI")
leaderboard = NodePath("UI/LeaderBoard")

[node name="AnimatedBackground" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_gaa0i")
scale = Vector2(0.833333, 2.275)
texture = ExtResource("8_q1775")
centered = false

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Grid" parent="." node_paths=PackedStringArray("soundManager") instance=ExtResource("1_ae5do")]
position = Vector2(400, 288)
soundManager = NodePath("../SoundManager")

[node name="UI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true
script = ExtResource("3_qfqky")

[node name="VBoxContainer2" type="VBoxContainer" parent="UI"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -86.0
offset_bottom = 623.0
grow_horizontal = 0

[node name="ThirdUpcoming" type="Sprite2D" parent="UI/VBoxContainer2"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_hmenq")
centered = false
offset = Vector2(-100, 100)

[node name="SecondUpcoming" type="Sprite2D" parent="UI/VBoxContainer2"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_s1ckg")
centered = false
offset = Vector2(-100, 600)

[node name="FirstUpcoming" type="Sprite2D" parent="UI/VBoxContainer2"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_42lau")
centered = false
offset = Vector2(-100, 1100)

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_right = 48.0
offset_bottom = 92.0
grow_horizontal = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "SCORE"
label_settings = SubResource("LabelSettings_3112v")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LevelLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "SCORE"
label_settings = SubResource("LabelSettings_3112v")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HoldLabel" type="Sprite2D" parent="UI/VBoxContainer/Control"]
scale = Vector2(0.2, 0.2)
offset = Vector2(0, 200)
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="Control" parent="UI"]
custom_minimum_size = Vector2(800, 910)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_right = 400.0
offset_bottom = 910.0
grow_horizontal = 2

[node name="BackGround" type="ColorRect" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.411765, 0.439216, 0.878431, 1)

[node name="TitleContainer" type="Control" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
scale = Vector2(0.864975, 0.864975)

[node name="Title" type="TextureRect" parent="UI/MainMenu/TitleContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -480.0
offset_right = 480.0
offset_bottom = 400.0
grow_horizontal = 2
texture = ExtResource("8_q1775")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -33.0
offset_right = 248.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Play" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="Button_Settings" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="Button_Help" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
text = "HELP"

[node name="CreditsLabel" type="Label" parent="UI/MainMenu"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -23.0
offset_right = 480.0
grow_horizontal = 2
grow_vertical = 0
text = "2024 - Emmanuel Bouis"
label_settings = SubResource("LabelSettings_f871y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsMenu" type="Control" parent="UI"]
visible = false
custom_minimum_size = Vector2(800, 910)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_right = 400.0
offset_bottom = 910.0
grow_horizontal = 2

[node name="BackGround" type="ColorRect" parent="UI/SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.411765, 0.439216, 0.878431, 1)

[node name="Label" type="Label" parent="UI/SettingsMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_k7ujp")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -33.0
offset_right = 248.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label_Music" type="Label" parent="UI/SettingsMenu/VBoxContainer"]
layout_mode = 2
text = "Music volume"

[node name="HSlider_Music" type="HSlider" parent="UI/SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Label_VFX" type="Label" parent="UI/SettingsMenu/VBoxContainer"]
layout_mode = 2
text = "Sound effects volume"

[node name="HSlider_VFX" type="HSlider" parent="UI/SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Container_Hold" type="MarginContainer" parent="UI/SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="UI/SettingsMenu/VBoxContainer/Container_Hold"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="UI/SettingsMenu/VBoxContainer/Container_Hold"]
layout_mode = 2
size_flags_horizontal = 0
text = "Hold Queue
"

[node name="Container_Ghost" type="MarginContainer" parent="UI/SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="UI/SettingsMenu/VBoxContainer/Container_Ghost"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="UI/SettingsMenu/VBoxContainer/Container_Ghost"]
layout_mode = 2
size_flags_horizontal = 0
text = "Ghost Piece"

[node name="Container_NextQueue" type="MarginContainer" parent="UI/SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="NextQueueLabel" type="Label" parent="UI/SettingsMenu/VBoxContainer/Container_NextQueue"]
layout_mode = 2
text = "Number of Hexominos displayed in the Next Queue"

[node name="SpinBox" type="SpinBox" parent="UI/SettingsMenu/VBoxContainer/Container_NextQueue"]
layout_mode = 2
size_flags_horizontal = 8
max_value = 6.0

[node name="Container_LockDown" type="MarginContainer" parent="UI/SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/SettingsMenu/VBoxContainer/Container_LockDown"]
layout_mode = 2
size_flags_horizontal = 0
text = "Lock Down Mode"

[node name="OptionButton" type="OptionButton" parent="UI/SettingsMenu/VBoxContainer/Container_LockDown"]
layout_mode = 2
size_flags_horizontal = 8
item_count = 3
popup/item_0/text = "Infinite placement"
popup/item_0/id = 0
popup/item_1/text = "Extended"
popup/item_1/id = 1
popup/item_2/text = "Classic"
popup/item_2/id = 2

[node name="CreditsLabel" type="Label" parent="UI/SettingsMenu"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -23.0
offset_right = 480.0
grow_horizontal = 2
grow_vertical = 0
text = "2024 - Emmanuel Bouis"
label_settings = SubResource("LabelSettings_f871y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaderBoard" type="Control" parent="UI"]
visible = false
custom_minimum_size = Vector2(800, 910)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_right = 400.0
offset_bottom = 910.0
grow_horizontal = 2
script = ExtResource("9_x1esd")

[node name="BackGround" type="ColorRect" parent="UI/LeaderBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.411765, 0.439216, 0.878431, 1)

[node name="Label" type="Label" parent="UI/LeaderBoard"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "LEADERBOARD"
label_settings = SubResource("LabelSettings_k7ujp")

[node name="VBox_HighScores" type="VBoxContainer" parent="UI/LeaderBoard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -33.0
offset_right = 248.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsLabel" type="Label" parent="UI/LeaderBoard"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -23.0
offset_right = 480.0
grow_horizontal = 2
grow_vertical = 0
text = "2024 - Emmanuel Bouis"
label_settings = SubResource("LabelSettings_f871y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameUI" type="Control" parent="UI"]
visible = false
custom_minimum_size = Vector2(800, 910)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer_Left" type="VBoxContainer" parent="UI/GameUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="VBoxContainer_Hold" type="VBoxContainer" parent="UI/GameUI/MarginContainer/VBoxContainer_Left"]
layout_mode = 2

[node name="TextureRect_Hold" type="TextureRect" parent="UI/GameUI/MarginContainer/VBoxContainer_Left/VBoxContainer_Hold"]
layout_mode = 2

[node name="VBoxContainer_Score" type="VBoxContainer" parent="UI/GameUI/MarginContainer/VBoxContainer_Left"]
layout_mode = 2

[node name="Label_Title" type="Label" parent="UI/GameUI/MarginContainer/VBoxContainer_Left/VBoxContainer_Score"]
layout_mode = 2
text = "SCORE"

[node name="Label_Value" type="Label" parent="UI/GameUI/MarginContainer/VBoxContainer_Left/VBoxContainer_Score"]
layout_mode = 2
text = "###"

[node name="VBoxContainer_Time" type="VBoxContainer" parent="UI/GameUI/MarginContainer/VBoxContainer_Left"]
layout_mode = 2

[node name="Label_Title" type="Label" parent="UI/GameUI/MarginContainer/VBoxContainer_Left/VBoxContainer_Time"]
layout_mode = 2
text = "TIME"

[node name="Label_Value" type="Label" parent="UI/GameUI/MarginContainer/VBoxContainer_Left/VBoxContainer_Time"]
layout_mode = 2
text = "###"

[node name="VBoxContainer_Lines" type="VBoxContainer" parent="UI/GameUI/MarginContainer/VBoxContainer_Left"]
layout_mode = 2

[node name="Label_Title" type="Label" parent="UI/GameUI/MarginContainer/VBoxContainer_Left/VBoxContainer_Lines"]
layout_mode = 2
text = "LINES"

[node name="Label_Value" type="Label" parent="UI/GameUI/MarginContainer/VBoxContainer_Left/VBoxContainer_Lines"]
layout_mode = 2
text = "###"

[node name="VBoxContainer_Level" type="VBoxContainer" parent="UI/GameUI/MarginContainer/VBoxContainer_Left"]
layout_mode = 2

[node name="Label_Title" type="Label" parent="UI/GameUI/MarginContainer/VBoxContainer_Left/VBoxContainer_Level"]
layout_mode = 2
text = "LEVEL"

[node name="Label_Value" type="Label" parent="UI/GameUI/MarginContainer/VBoxContainer_Left/VBoxContainer_Level"]
layout_mode = 2
text = "###"

[node name="VBoxContainer_Right" type="VBoxContainer" parent="UI/GameUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="TextureRect_Next_1" type="TextureRect" parent="UI/GameUI/MarginContainer/VBoxContainer_Right"]
layout_mode = 2

[node name="TextureRect_Next_2" type="TextureRect" parent="UI/GameUI/MarginContainer/VBoxContainer_Right"]
layout_mode = 2

[node name="TextureRect_Next_3" type="TextureRect" parent="UI/GameUI/MarginContainer/VBoxContainer_Right"]
layout_mode = 2

[node name="TextureRect_Next_4" type="TextureRect" parent="UI/GameUI/MarginContainer/VBoxContainer_Right"]
layout_mode = 2

[node name="TextureRect_Next_5" type="TextureRect" parent="UI/GameUI/MarginContainer/VBoxContainer_Right"]
layout_mode = 2

[node name="TextureRect_Next_6" type="TextureRect" parent="UI/GameUI/MarginContainer/VBoxContainer_Right"]
layout_mode = 2

[node name="HelpUI" type="Control" parent="UI"]
visible = false
custom_minimum_size = Vector2(800, 910)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PauseMenu" type="Control" parent="UI"]
visible = false
custom_minimum_size = Vector2(800, 910)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SoundManager" type="Node" parent="." node_paths=PackedStringArray("musicPlayer", "sfxPlayer_1", "sfxPlayer_2")]
script = ExtResource("9_tkctc")
musicPlayer = NodePath("MusicPlayer")
sfxPlayer_1 = NodePath("SFXPlayer_1")
sfxPlayer_2 = NodePath("FXPlayer_2")
sfx_oneLine = ExtResource("10_pmf37")
sfx_twoLines = ExtResource("11_prouk")
sfx_threeLines = ExtResource("12_fcj3h")
sfx_fourLines = ExtResource("13_xsvr1")
sfx_hardDrop = ExtResource("14_p1ys5")
sfx_softDrop = ExtResource("15_kls3b")
sfx_rotation = ExtResource("16_igtus")
sfx_movement = ExtResource("17_lc6ri")
sfx_hold = ExtResource("18_5ed10")
sfx_error = ExtResource("19_45we2")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("8_ftwso")
volume_db = -80.0
autoplay = true

[node name="SFXPlayer_1" type="AudioStreamPlayer" parent="SoundManager"]

[node name="FXPlayer_2" type="AudioStreamPlayer" parent="SoundManager"]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Button_Play" to="UI" method="_on_button_play_pressed"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Button_Settings" to="UI" method="_on_button_settings_pressed"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Button_Help" to="UI" method="_on_button_help_pressed"]
[connection signal="value_changed" from="UI/SettingsMenu/VBoxContainer/HSlider_Music" to="SoundManager" method="_on_h_slider_music_value_changed"]
[connection signal="value_changed" from="UI/SettingsMenu/VBoxContainer/HSlider_VFX" to="SoundManager" method="_on_h_slider_vfx_value_changed"]
